SNC-5322: Support turkish language.

--- a/src/MEGASync/gui/Resources_macx.qrc
+++ b/src/MEGASync/gui/Resources_macx.qrc
@@ -418,6 +418,7 @@
         <file>translations/MEGASyncStrings_ro.qm</file>
         <file>translations/MEGASyncStrings_ru.qm</file>
         <file>translations/MEGASyncStrings_th.qm</file>
+        <file>translations/MEGASyncStrings_tr.qm</file>
         <file>translations/MEGASyncStrings_vi.qm</file>
         <file>translations/MEGASyncStrings_zh_CN.qm</file>
         <file>translations/MEGASyncStrings_zh_TW.qm</file>
