--- a/src/MEGASync/gui/Resources_linux.qrc
+++ b/src/MEGASync/gui/Resources_linux.qrc
@@ -1524,5 +1524,8 @@
         <file>images/node_selector/search_filter/small_trash_selected.png</file>
         <file>images/node_selector/search_filter/small_trash_selected@2x.png</file>
         <file>images/node_selector/search_filter/small_trash_selected@3x.png</file>
+        <file>images/node_selector/plus.png</file>
+        <file>images/node_selector/plus@2x.png</file>
+        <file>images/node_selector/plus@3x.png</file>
     </qresource>
 </RCC>
