--- a/src/MEGASync/gui/node_selector/gui/linux/NodeSelector.ui
+++ b/src/MEGASync/gui/node_selector/gui/linux/NodeSelector.ui
@@ -26,12 +26,7 @@
    <bool>false</bool>
   </property>
   <property name="styleSheet">
-   <string notr="true">QGroupBox, QPushButton
-{
-background-color: transparent;
-}
-
-#cbAlwaysUploadToLocation
+   <string notr="true">#cbAlwaysUploadToLocation
 {
     spacing: 10px;
 }
