SNC-5352: Split ChooseSyncFolder into two components.

--- a/src/MEGASync/gui/qml/qml.qrc
+++ b/src/MEGASync/gui/qml/qml.qrc
@@ -219,5 +219,7 @@
         <file>common/DeviceName.qml</file>
         <file>components/dialogs/ErrorDialog.qml</file>
         <file>components/dialogs/TitleBodyDialog.qml</file>
+        <file>syncs/ChooseSyncRemoteFolder.qml</file>
+        <file>syncs/ChooseSyncLocalFolder.qml</file>
     </qresource>
 </RCC>
