Removed uses of CocoaHelpButton

--- a/src/MEGASync/gui/Resources_macx.qrc
+++ b/src/MEGASync/gui/Resources_macx.qrc
@@ -119,6 +119,10 @@
         <file>images/empty-notifications@2x.png</file>
         <file>images/error.png</file>
         <file>images/error@2x.png</file>
+        <file>images/help_ico.png</file>
+        <file>images/help_ico@2x.png</file>
+        <file>images/help_ico@3x.png</file>
+        <file>images/full_sync_ico@2x.png</file>
         <file>images/full_sync_ico.png</file>
         <file>images/full_sync_ico@2x.png</file>
         <file>images/ico_about_MEGA.png</file>
