--- a/src/MEGASync/gui/qml/qml.qrc
+++ b/src/MEGASync/gui/qml/qml.qrc
@@ -218,8 +218,6 @@
         <file>common/DeviceName.qml</file>
         <file>components/dialogs/ErrorDialog.qml</file>
         <file>components/dialogs/TitleBodyDialog.qml</file>
-        <file>syncs/ChooseSyncRemoteFolder.qml</file>
-        <file>syncs/ChooseSyncLocalFolder.qml</file>
-        <file>syncs/ChooseSyncFolderCore.qml</file>
+        <file>syncs/ChooseSyncFolder.qml</file>
     </qresource>
 </RCC>
