--- a/src/MEGASync/gui/Resources.qrc
+++ b/src/MEGASync/gui/Resources.qrc
@@ -119,8 +119,15 @@
         <file>images/themed/dark/checkbox_off_focus_error.svg</file>
         <file>images/themed/dark/checkbox_on_error.svg</file>
         <file>images/themed/dark/checkbox_on_focus_error.svg</file>
-        <file>images/icons/settings.svg</file>
-        <file>images/icons/exit.svg</file>
-        <file>images/icons/status.svg</file>
+        <file>images/icons/tray/settings.svg</file>
+        <file>images/icons/tray/exit.svg</file>
+        <file>images/icons/tray/status.svg</file>
+        <file>images/icons/tray/stream.svg</file>
+        <file>images/icons/tray/transfer_manager.svg</file>
+        <file>images/icons/tray/upload.svg</file>
+        <file>images/icons/tray/download.svg</file>
+        <file>images/icons/tray/about.svg</file>
+        <file>images/icons/tray/file.svg</file>
+        <file>images/icons/tray/open_links.svg</file>
     </qresource>
 </RCC>
