--- a/src/MEGASync/gui/Resources.qrc
+++ b/src/MEGASync/gui/Resources.qrc
@@ -131,5 +131,7 @@
         <file>images/icons/tray/windows/about.svg</file>
         <file>images/icons/tray/windows/drive.svg</file>
         <file>images/icons/tray/windows/open_links.svg</file>
+        <file>images/icons/tray/macos/exit.svg</file>
+        <file>images/icons/tray/macos/settings.svg</file>
     </qresource>
 </RCC>
