--- a/src/MEGASync/transfers/gui/win/TransferManager.ui
+++ b/src/MEGASync/transfers/gui/win/TransferManager.ui
@@ -340,7 +340,7 @@ QGroupBox::title
 
 #bUpgrade
 {
-	font-family: Inter;
+        font-family: Lato;
 	font-size: 12px;
 	line-height: 16px;
 	border: 1px solid #0000001A;
@@ -352,7 +352,7 @@ QGroupBox::title
 
 #lStorage
 {
-	font-family: Inter;
+        font-family: Lato;
 	font-size: 12px;
 	line-height: 18px;
 	color: #303233;
@@ -428,7 +428,7 @@ QGroupBox::title
 
 #bAccountType
 {
-	font-family: Inter;
+        font-family: Lato;
 	font-size: 10px;
     line-height: 14px;
 	font-weight: 600;
