--- a/src/MEGASync/transfers/gui/win/TransfersAccountInfoWidget.ui
+++ b/src/MEGASync/transfers/gui/win/TransfersAccountInfoWidget.ui
@@ -21,7 +21,7 @@
 
 #bUpgrade
 {
-	font-family: Inter;
+        font-family: Lato;
 	font-size: 12px;
 	line-height: 16px;
 	border: 1px solid #0000001A;
@@ -33,7 +33,7 @@
 
 #lStorage
 {
-	font-family: Inter;
+        font-family: Lato;
 	font-size: 12px;
 	line-height: 18px;
 	color: #303233;
