--- a/src/MEGASync/gui/qml/qml.qrc
+++ b/src/MEGASync/gui/qml/qml.qrc
@@ -136,7 +136,12 @@
         <file>onboard/syncs_types/SyncsVerticalButton.qml</file>
         <file>onboard/syncs_types/StepPanel.qml</file>
         <file>onboard/syncs_types/SyncsPage.qml</file>
+        <file>onboard/syncs_types/AddSyncPage.qml</file>
+        <file>onboard/syncs_types/AddSyncPageForm.ui.qml</file>
+        <file>onboard/syncs_types/SyncsFlow.qml</file>
         <file>onboard/syncs_types/backups/qmldir</file>
+        <file>onboard/syncs_types/ConfirmSyncsPage.qml</file>
+        <file>onboard/syncs_types/ConfirmSyncsPageForm.ui.qml</file>
         <file>onboard/syncs_types/backups/BackupsPage.qml</file>
         <file>onboard/syncs_types/backups/ConfirmFoldersPage.qml</file>
         <file>onboard/syncs_types/backups/ConfirmFoldersPageForm.ui.qml</file>
