SNC-5454: Work in progress sync table.

--- a/src/MEGASync/gui/qml/qml.qrc
+++ b/src/MEGASync/gui/qml/qml.qrc
@@ -142,6 +142,7 @@
         <file>onboard/syncs_types/backups/qmldir</file>
         <file>onboard/syncs_types/ConfirmSyncsPage.qml</file>
         <file>onboard/syncs_types/ConfirmSyncsPageForm.ui.qml</file>
+        <file>onboard/syncs_types/ConfirmSyncsTable.qml</file>
         <file>onboard/syncs_types/backups/BackupsPage.qml</file>
         <file>onboard/syncs_types/backups/ConfirmFoldersPage.qml</file>
         <file>onboard/syncs_types/backups/ConfirmFoldersPageForm.ui.qml</file>
