SNC-5454: Update icon for local folder, change sync icon size,etc..

--- a/src/MEGASync/gui/Resources_qml.qrc
+++ b/src/MEGASync/gui/Resources_qml.qrc
@@ -129,11 +129,13 @@
         <file>images/qml/onboarding/backup@2x.png</file>
         <file>images/qml/onboarding/backup.png</file>
         <file>images/qml/onboarding/sync.png</file>
-        <file>images/qml/onboarding/local_folder.svg</file>
         <file>images/qml/onboarding/mega.svg</file>
         <file>images/qml/onboarding/monitor.svg</file>
         <file>images/qml/onboarding/remote_folder.svg</file>
         <file>images/qml/onboarding/syncs.svg</file>
         <file>images/qml/onboarding/more_horizontal.svg</file>
+        <file>images/qml/onboarding/local_folder.png</file>
+        <file>images/qml/onboarding/local_folder@2x.png</file>
+        <file>images/qml/onboarding/local_folder@3x.png</file>
     </qresource>
 </RCC>
