SNC-5454: Used form to have initial default path & assigned ones, etc..

--- a/src/MEGASync/gui/qml/qml.qrc
+++ b/src/MEGASync/gui/qml/qml.qrc
@@ -139,6 +139,7 @@
         <file>onboard/syncs_types/AddSyncPage.qml</file>
         <file>onboard/syncs_types/AddSyncPageForm.ui.qml</file>
         <file>onboard/syncs_types/AddSyncDialog.qml</file>
+        <file>onboard/syncs_types/AddSyncDialogForm.ui.qml</file>
         <file>onboard/syncs_types/SyncsFlow.qml</file>
         <file>onboard/syncs_types/backups/qmldir</file>
         <file>onboard/syncs_types/ConfirmSyncsPage.qml</file>
